fixed work-card overflow - section now sizes itself depending on content

--- a/css/section-my-work.css
+++ b/css/section-my-work.css
@@ -1,7 +1,9 @@
-/* contains all work cards */
+#section-work {
+    height: min-content;
+}
+
 #section-work .section-content-col {
     position: flex;
-    /* TODO */
     overflow: visible;
 }
 
